# GradientBoosting

./: CMakeLists.txt  README.md
.github/workflows/: checks.yml
include/: decision_tree.hpp  header.hpp  utility.hpp
sources/: decision_tree.cpp
tests/: test.cpp
